force-twisticonics/main/default/objects/ICX_Object_Field__mdt/ICX_Object_Field__mdt.object-meta.xml
<CustomObject>
    <description>For now, Fields to track in the &quot;Order Search&quot; context</description>
    <label>ICX Object Field</label>
    <pluralLabel>ICX Object Fields</pluralLabel>
</CustomObject>