force-twisticonics/main/default/objects/ICX_Object_Field__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <metadataRelationshipControllingField>ICX_Object_Field__mdt.Source_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Search_Orders</relationshipLabel>
    <relationshipName>Search_Orders</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>