force-twisticonics/main/default/objects/ICX_Object_Field__mdt/fields/Source_Field_Not_managed__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Not_managed__c</fullName>
    <inlineHelpText>Use this field instead of &quot;Source Field&quot; if the searched object is not available.
The expected value is the API Name</inlineHelpText>
    <label>Source Field (Not managed)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>