force-twisticonics/main/default/objects/ICX_Object_Field__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Search_Orders</relationshipLabel>
    <relationshipName>Search_Orders</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>