force-twisticonics/main/default/objects/ICX_Object_Field__mdt/listViews/icxobjectfield_all.listView-meta.xml
<ListView>
    <fullName>icxobjectfield_all</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Source_Object__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Source_Field_Not_managed__c</columns>
    <columns>Source_Object_Not_managed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
    <language>en_US</language>
</ListView>